@@ -143,3 +143,4 @@ list, please point out.
 * zachwily: A bug report.
 * syrius.ml@no-log.org: A bug report.
 * Tim Hermans: A bug report.
+* Anthony M. Martinez: Helped SASL options support
